Issue 616:move integration tests to jboss as7